--- a/src/components/header.css
+++ b/src/components/header.css
@@ -3,3 +3,16 @@
   justify-content: space-between;
   color: black;
 }
+
+.search-input {
+  width: 200px;
+  height: 40px;
+  margin-bottom: 10px;
+  border: none;
+  outline: none;
+}
+
+.search-filter {
+  display: flex;
+  height: 40px;
+}
